# attack_defense_rl

./: .gitignore  README.md  plan.md  pyproject.toml  requirements.txt  roadmap.md
scripts/: dashboard.py  evaluate.py  train_red.py  visualize.py
src/: config.py
src/agents/: blue_scripted.py  callbacks.py  red_trainer.py  wrappers.py
src/dashboard/: __init__.py  charts.py  data_loader.py  network_view.py
src/environment/: __init__.py  action_mask.py  actions.py  cyber_env.py  fog_of_war.py  network.py  node.py  vulnerability.py
src/pcg/: __init__.py  curriculum.py  difficulty.py  generator.py
src/visualization/: __init__.py  controls.py  graph_view.py  render_state.py  renderer.py  theme.py  ui_panels.py
tests/: conftest.py
tests/phase1/: test_action_mask.py  test_actions.py  test_cyber_env.py  test_fog_of_war.py  test_network.py  test_node.py  test_vulnerability.py
tests/phase2/: conftest.py  test_controls.py  test_graph_view_extended.py  test_render_state.py  test_renderer.py  test_ui_panels.py
tests/phase3/: conftest.py  test_callbacks.py  test_integration.py  test_red_trainer.py  test_wrappers.py
tests/phase4/: test_blue_integration.py  test_blue_scripted.py  test_review_fixes.py
tests/phase5/: test_curriculum.py  test_difficulty.py  test_generator.py  test_pcg_integration.py  test_review_fixes.py
